# semantica

./: .gitignore  LICENSE  README.md  entry.py  pyproject.toml
src/: config.py  engine.py  main.py  reader.py  scanner.py  storage.py  utils.py
src/semantica/: engine.py  main.py  reader.py  scanner.py  storage.py  utils.py
