[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semantica"
version = "0.1.0"
description = "Semantic search engine tool"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "faiss-cpu", #faiss-gpu
    "fastembed",
    "spacy",
    "termcolor",
    "pypdf",
    "python-docx",
    "psutil"
]

[project.scripts]
semantica = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]